Добавлены первые модели и сериализаторы

--- a/blogproject/docker-compose.yaml
+++ b/blogproject/docker-compose.yaml
@@ -17,6 +17,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+
+    volumes:
+      - .:/app
     restart: always
     ports:
       - "0.0.0.0:8000:8000"
