--- a/blogproject/requirements.txt
+++ b/blogproject/requirements.txt
@@ -7,6 +7,8 @@ sqlparse==0.4.4
 pytz==2024.1
 Pillow==10.2.0
 djangorestframework-simplejwt==5.3.1
-django-storages===1.14.2
+django-storages==1.14.2
 boto3==1.34.49
+django-allauth==0.61.1
+
 
