--- a/blogproject/backend/requirements.txt
+++ b/blogproject/backend/requirements.txt
@@ -10,5 +10,5 @@ djangorestframework-simplejwt==5.3.1
 django-storages==1.14.2
 boto3==1.34.49
 django-allauth==0.61.1
-
-
+django-cors-headers==4.3.1
+django-allauth==0.61.1
