--- a/blogproject/docker-compose.yaml
+++ b/blogproject/docker-compose.yaml
@@ -13,16 +13,14 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  django_app:
+  backend:
     build:
-      context: .
-      dockerfile: Dockerfile
-
+      context: ./backend
     volumes:
-      - .:/app
+      - ./backend:/app
     restart: always
     ports:
-      - "0.0.0.0:8000:8000"
+      - "8000:8000"
     depends_on:
       - postgres_db
     environment:
@@ -31,6 +29,15 @@ services:
       DJANGO_DB_NAME: blog_db
       DJANGO_DB_USER: blog_admin
       DJANGO_DB_PASSWORD: 1234
-
+  
+  frontend:
+    build:
+      context: ./frontend
+    volumes:
+      - ./frontend:/app
+    command: npm run start
+    ports:
+      - "3000:3000"
+   
 volumes:
   postgres_data:
